<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".NumberGuessActivity">
    <TextView
            android:text="@string/number_guess_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/title" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:textSize="24sp" android:textAlignment="center"/>
    <TextView
            android:text="@string/sub_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sub_title" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/title" android:textAlignment="center"/>
    <Button
            android:text="@string/play_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/play_again_button" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:textAlignment="center"
            android:onClick="playAgainClick"/>
    <TextView
            android:text="@string/hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/hint" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/play_again_button" android:textAlignment="center"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/number_edit_text" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/sub_title"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/hint"
            android:hint="@string/number"/>
    <Button
            android:text="@string/guess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guess_button" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/number_edit_text" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:onClick="guessClick"/>
</androidx.constraintlayout.widget.ConstraintLayout>